--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_large_commercial_monthly_corporate_supporter_monthly_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_large_commercial_monthly_corporate_supporter_monthly_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_monthly&description=FooBar%20Inc%20corporate%20supporter%20membership%20(QC7467BL)
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_monthly&description=FooBar%20Inc%20corporate%20supporter%20membership%20(QS5747OZ)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -31,60 +31,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:12:02 GMT
+      - Wed, 11 Jun 2014 15:43:27 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '2260'
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Max-Age:
       - '300'
       Cache-Control:
       - no-cache, no-store
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      - 'true'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
       Stripe-Version:
       - '2014-05-19'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495921,\n  \"id\":
-        \"cus_4CbfKzUR69LUTN\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc corporate supporter membership (QC7467BL)\",\n  \"email\": null,\n  \"delinquent\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501406,\n  \"id\":
+        \"cus_4Cd9YWsYwtsQld\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc corporate supporter membership (QS5747OZ)\",\n  \"email\": null,\n  \"delinquent\":
         false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfKzUR69LUTN/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfuY3t7EIsgr\",\n        \"plan\":
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9YWsYwtsQld/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9bXixC8koS1\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Corporate Supporter
         (Monthly)\",\n          \"created\": 1402481417,\n          \"amount\": 12000,\n
         \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_monthly\",\n
         \         \"object\": \"plan\",\n          \"livemode\": false,\n          \"interval_count\":
         1,\n          \"trial_period_days\": null,\n          \"metadata\": {},\n
         \         \"statement_description\": null\n        },\n        \"object\":
-        \"subscription\",\n        \"start\": 1402495921,\n        \"status\": \"active\",\n
-        \       \"customer\": \"cus_4CbfKzUR69LUTN\",\n        \"cancel_at_period_end\":
-        false,\n        \"current_period_start\": 1402495921,\n        \"current_period_end\":
-        1405087921,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
+        \"subscription\",\n        \"start\": 1402501406,\n        \"status\": \"active\",\n
+        \       \"customer\": \"cus_4Cd9YWsYwtsQld\",\n        \"cancel_at_period_end\":
+        false,\n        \"current_period_start\": 1402501406,\n        \"current_period_end\":
+        1405093406,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
         \       \"trial_end\": null,\n        \"canceled_at\": null,\n        \"quantity\":
         1,\n        \"application_fee_percent\": null,\n        \"discount\": null,\n
         \       \"metadata\": {}\n      }\n    ]\n  },\n  \"discount\": null,\n  \"account_balance\":
         0,\n  \"currency\": \"gbp\",\n  \"cards\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfKzUR69LUTN/cards\",\n
-        \   \"data\": [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVPGpA473K\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9YWsYwtsQld/cards\",\n
+        \   \"data\": [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwVpAXqMrjW\",\n
         \       \"object\": \"card\",\n        \"last4\": \"4242\",\n        \"type\":
         \"Visa\",\n        \"exp_month\": 12,\n        \"exp_year\": 2016,\n        \"fingerprint\":
         \"ynpvkg0lBh03Sjdq\",\n        \"country\": \"US\",\n        \"name\": null,\n
         \       \"address_line1\": null,\n        \"address_line2\": null,\n        \"address_city\":
         null,\n        \"address_state\": null,\n        \"address_zip\": null,\n
         \       \"address_country\": null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfKzUR69LUTN\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVPGpA473K\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd9YWsYwtsQld\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwVpAXqMrjW\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:12:02 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:27 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CbfKzUR69LUTN
+    uri: https://api.stripe.com/v1/customers/cus_4Cd9YWsYwtsQld
     body:
       encoding: US-ASCII
       string: ''
@@ -111,60 +111,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:12:02 GMT
+      - Wed, 11 Jun 2014 15:43:28 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '2260'
+      Stripe-Version:
+      - '2014-05-19'
+      Cache-Control:
+      - no-cache, no-store
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Max-Age:
       - '300'
-      Cache-Control:
-      - no-cache, no-store
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Stripe-Version:
-      - '2014-05-19'
+      - 'true'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495921,\n  \"id\":
-        \"cus_4CbfKzUR69LUTN\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc corporate supporter membership (QC7467BL)\",\n  \"email\": null,\n  \"delinquent\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501406,\n  \"id\":
+        \"cus_4Cd9YWsYwtsQld\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc corporate supporter membership (QS5747OZ)\",\n  \"email\": null,\n  \"delinquent\":
         false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfKzUR69LUTN/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfuY3t7EIsgr\",\n        \"plan\":
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9YWsYwtsQld/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9bXixC8koS1\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Corporate Supporter
         (Monthly)\",\n          \"created\": 1402481417,\n          \"amount\": 12000,\n
         \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_monthly\",\n
         \         \"object\": \"plan\",\n          \"livemode\": false,\n          \"interval_count\":
         1,\n          \"trial_period_days\": null,\n          \"metadata\": {},\n
         \         \"statement_description\": null\n        },\n        \"object\":
-        \"subscription\",\n        \"start\": 1402495921,\n        \"status\": \"active\",\n
-        \       \"customer\": \"cus_4CbfKzUR69LUTN\",\n        \"cancel_at_period_end\":
-        false,\n        \"current_period_start\": 1402495921,\n        \"current_period_end\":
-        1405087921,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
+        \"subscription\",\n        \"start\": 1402501406,\n        \"status\": \"active\",\n
+        \       \"customer\": \"cus_4Cd9YWsYwtsQld\",\n        \"cancel_at_period_end\":
+        false,\n        \"current_period_start\": 1402501406,\n        \"current_period_end\":
+        1405093406,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
         \       \"trial_end\": null,\n        \"canceled_at\": null,\n        \"quantity\":
         1,\n        \"application_fee_percent\": null,\n        \"discount\": null,\n
         \       \"metadata\": {}\n      }\n    ]\n  },\n  \"discount\": null,\n  \"account_balance\":
         0,\n  \"currency\": \"gbp\",\n  \"cards\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfKzUR69LUTN/cards\",\n
-        \   \"data\": [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVPGpA473K\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9YWsYwtsQld/cards\",\n
+        \   \"data\": [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwVpAXqMrjW\",\n
         \       \"object\": \"card\",\n        \"last4\": \"4242\",\n        \"type\":
         \"Visa\",\n        \"exp_month\": 12,\n        \"exp_year\": 2016,\n        \"fingerprint\":
         \"ynpvkg0lBh03Sjdq\",\n        \"country\": \"US\",\n        \"name\": null,\n
         \       \"address_line1\": null,\n        \"address_line2\": null,\n        \"address_city\":
         null,\n        \"address_state\": null,\n        \"address_zip\": null,\n
         \       \"address_country\": null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfKzUR69LUTN\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVPGpA473K\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd9YWsYwtsQld\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwVpAXqMrjW\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:12:02 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:28 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CbfKzUR69LUTN
+    uri: https://api.stripe.com/v1/customers/cus_4Cd9YWsYwtsQld
     body:
       encoding: US-ASCII
       string: ''
@@ -191,55 +191,55 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:12:03 GMT
+      - Wed, 11 Jun 2014 15:43:29 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '2260'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Max-Age:
       - '300'
       Cache-Control:
       - no-cache, no-store
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
+      - 'true'
       Stripe-Version:
       - '2014-05-19'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495921,\n  \"id\":
-        \"cus_4CbfKzUR69LUTN\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc corporate supporter membership (QC7467BL)\",\n  \"email\": null,\n  \"delinquent\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501406,\n  \"id\":
+        \"cus_4Cd9YWsYwtsQld\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc corporate supporter membership (QS5747OZ)\",\n  \"email\": null,\n  \"delinquent\":
         false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfKzUR69LUTN/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfuY3t7EIsgr\",\n        \"plan\":
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9YWsYwtsQld/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9bXixC8koS1\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Corporate Supporter
         (Monthly)\",\n          \"created\": 1402481417,\n          \"amount\": 12000,\n
         \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_monthly\",\n
         \         \"object\": \"plan\",\n          \"livemode\": false,\n          \"interval_count\":
         1,\n          \"trial_period_days\": null,\n          \"metadata\": {},\n
         \         \"statement_description\": null\n        },\n        \"object\":
-        \"subscription\",\n        \"start\": 1402495921,\n        \"status\": \"active\",\n
-        \       \"customer\": \"cus_4CbfKzUR69LUTN\",\n        \"cancel_at_period_end\":
-        false,\n        \"current_period_start\": 1402495921,\n        \"current_period_end\":
-        1405087921,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
+        \"subscription\",\n        \"start\": 1402501406,\n        \"status\": \"active\",\n
+        \       \"customer\": \"cus_4Cd9YWsYwtsQld\",\n        \"cancel_at_period_end\":
+        false,\n        \"current_period_start\": 1402501406,\n        \"current_period_end\":
+        1405093406,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
         \       \"trial_end\": null,\n        \"canceled_at\": null,\n        \"quantity\":
         1,\n        \"application_fee_percent\": null,\n        \"discount\": null,\n
         \       \"metadata\": {}\n      }\n    ]\n  },\n  \"discount\": null,\n  \"account_balance\":
         0,\n  \"currency\": \"gbp\",\n  \"cards\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfKzUR69LUTN/cards\",\n
-        \   \"data\": [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVPGpA473K\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9YWsYwtsQld/cards\",\n
+        \   \"data\": [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwVpAXqMrjW\",\n
         \       \"object\": \"card\",\n        \"last4\": \"4242\",\n        \"type\":
         \"Visa\",\n        \"exp_month\": 12,\n        \"exp_year\": 2016,\n        \"fingerprint\":
         \"ynpvkg0lBh03Sjdq\",\n        \"country\": \"US\",\n        \"name\": null,\n
         \       \"address_line1\": null,\n        \"address_line2\": null,\n        \"address_city\":
         null,\n        \"address_state\": null,\n        \"address_zip\": null,\n
         \       \"address_country\": null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfKzUR69LUTN\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVPGpA473K\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd9YWsYwtsQld\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwVpAXqMrjW\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:12:03 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:29 GMT
 recorded_with: VCR 2.9.2
