--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_large_non_commercial_annual_supporter_annual_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_large_non_commercial_annual_supporter_annual_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=supporter_monthly&description=FooBar%20Inc%20supporter%20membership%20(ZL2563AF)
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=supporter_annual&description=FooBar%20Inc%20%20membership%20(IC0136UH)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '168'
+      - '158'
   response:
     status:
       code: 200
@@ -31,60 +31,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:11:58 GMT
+      - Wed, 11 Jun 2014 15:43:35 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2229'
-      Access-Control-Max-Age:
-      - '300'
+      - '2218'
       Cache-Control:
       - no-cache, no-store
-      Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
       Stripe-Version:
       - '2014-05-19'
+      Access-Control-Max-Age:
+      - '300'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
+      Access-Control-Allow-Credentials:
+      - 'true'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495918,\n  \"id\":
-        \"cus_4CbffHpl8fWuyX\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc supporter membership (ZL2563AF)\",\n  \"email\": null,\n  \"delinquent\":
-        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbffHpl8fWuyX/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfXLp2FILP5e\",\n        \"plan\":
-        {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
-        \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
-        \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
-        \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
-        \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
-        null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402495918,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbffHpl8fWuyX\",\n
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501415,\n  \"id\":
+        \"cus_4Cd96ih4bIQJUx\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc  membership (IC0136UH)\",\n  \"email\": null,\n  \"delinquent\": false,\n
+        \ \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
+        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd96ih4bIQJUx/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9WZccJ7IbO6\",\n        \"plan\":
+        {\n          \"interval\": \"year\",\n          \"name\": \"Supporter (Annual)\",\n
+        \         \"created\": 1402481487,\n          \"amount\": 72000,\n          \"currency\":
+        \"gbp\",\n          \"id\": \"supporter_annual\",\n          \"object\": \"plan\",\n
+        \         \"livemode\": false,\n          \"interval_count\": 1,\n          \"trial_period_days\":
+        null,\n          \"metadata\": {},\n          \"statement_description\": null\n
+        \       },\n        \"object\": \"subscription\",\n        \"start\": 1402501415,\n
+        \       \"status\": \"active\",\n        \"customer\": \"cus_4Cd96ih4bIQJUx\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402495918,\n        \"current_period_end\": 1405087918,\n        \"ended_at\":
+        1402501415,\n        \"current_period_end\": 1434037415,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CbffHpl8fWuyX/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVExF6aMFc\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4Cd96ih4bIQJUx/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwVYseWs5Vi\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbffHpl8fWuyX\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVExF6aMFc\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd96ih4bIQJUx\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwVYseWs5Vi\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:11:58 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:35 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CbffHpl8fWuyX
+    uri: https://api.stripe.com/v1/customers/cus_4Cd96ih4bIQJUx
     body:
       encoding: US-ASCII
       string: ''
@@ -111,60 +111,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:11:59 GMT
+      - Wed, 11 Jun 2014 15:43:36 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2229'
-      Access-Control-Max-Age:
-      - '300'
+      - '2218'
       Cache-Control:
       - no-cache, no-store
-      Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
       Stripe-Version:
       - '2014-05-19'
+      Access-Control-Max-Age:
+      - '300'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
+      Access-Control-Allow-Credentials:
+      - 'true'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495918,\n  \"id\":
-        \"cus_4CbffHpl8fWuyX\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc supporter membership (ZL2563AF)\",\n  \"email\": null,\n  \"delinquent\":
-        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbffHpl8fWuyX/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfXLp2FILP5e\",\n        \"plan\":
-        {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
-        \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
-        \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
-        \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
-        \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
-        null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402495918,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbffHpl8fWuyX\",\n
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501415,\n  \"id\":
+        \"cus_4Cd96ih4bIQJUx\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc  membership (IC0136UH)\",\n  \"email\": null,\n  \"delinquent\": false,\n
+        \ \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
+        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd96ih4bIQJUx/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9WZccJ7IbO6\",\n        \"plan\":
+        {\n          \"interval\": \"year\",\n          \"name\": \"Supporter (Annual)\",\n
+        \         \"created\": 1402481487,\n          \"amount\": 72000,\n          \"currency\":
+        \"gbp\",\n          \"id\": \"supporter_annual\",\n          \"object\": \"plan\",\n
+        \         \"livemode\": false,\n          \"interval_count\": 1,\n          \"trial_period_days\":
+        null,\n          \"metadata\": {},\n          \"statement_description\": null\n
+        \       },\n        \"object\": \"subscription\",\n        \"start\": 1402501415,\n
+        \       \"status\": \"active\",\n        \"customer\": \"cus_4Cd96ih4bIQJUx\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402495918,\n        \"current_period_end\": 1405087918,\n        \"ended_at\":
+        1402501415,\n        \"current_period_end\": 1434037415,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CbffHpl8fWuyX/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVExF6aMFc\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4Cd96ih4bIQJUx/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwVYseWs5Vi\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbffHpl8fWuyX\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVExF6aMFc\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd96ih4bIQJUx\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwVYseWs5Vi\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:11:59 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:36 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CbffHpl8fWuyX
+    uri: https://api.stripe.com/v1/customers/cus_4Cd96ih4bIQJUx
     body:
       encoding: US-ASCII
       string: ''
@@ -191,55 +191,55 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:12:00 GMT
+      - Wed, 11 Jun 2014 15:43:37 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2229'
-      Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Stripe-Version:
-      - '2014-05-19'
-      Access-Control-Max-Age:
-      - '300'
+      - '2218'
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
+      Access-Control-Max-Age:
+      - '300'
       Cache-Control:
       - no-cache, no-store
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Stripe-Version:
+      - '2014-05-19'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495918,\n  \"id\":
-        \"cus_4CbffHpl8fWuyX\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc supporter membership (ZL2563AF)\",\n  \"email\": null,\n  \"delinquent\":
-        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbffHpl8fWuyX/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfXLp2FILP5e\",\n        \"plan\":
-        {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
-        \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
-        \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
-        \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
-        \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
-        null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402495918,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbffHpl8fWuyX\",\n
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501415,\n  \"id\":
+        \"cus_4Cd96ih4bIQJUx\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc  membership (IC0136UH)\",\n  \"email\": null,\n  \"delinquent\": false,\n
+        \ \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
+        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd96ih4bIQJUx/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9WZccJ7IbO6\",\n        \"plan\":
+        {\n          \"interval\": \"year\",\n          \"name\": \"Supporter (Annual)\",\n
+        \         \"created\": 1402481487,\n          \"amount\": 72000,\n          \"currency\":
+        \"gbp\",\n          \"id\": \"supporter_annual\",\n          \"object\": \"plan\",\n
+        \         \"livemode\": false,\n          \"interval_count\": 1,\n          \"trial_period_days\":
+        null,\n          \"metadata\": {},\n          \"statement_description\": null\n
+        \       },\n        \"object\": \"subscription\",\n        \"start\": 1402501415,\n
+        \       \"status\": \"active\",\n        \"customer\": \"cus_4Cd96ih4bIQJUx\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402495918,\n        \"current_period_end\": 1405087918,\n        \"ended_at\":
+        1402501415,\n        \"current_period_end\": 1434037415,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CbffHpl8fWuyX/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVExF6aMFc\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4Cd96ih4bIQJUx/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwVYseWs5Vi\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbffHpl8fWuyX\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVExF6aMFc\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd96ih4bIQJUx\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwVYseWs5Vi\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:12:00 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:37 GMT
 recorded_with: VCR 2.9.2
