--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_small_commercial_monthly_supporter_monthly_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_small_commercial_monthly_supporter_monthly_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=supporter_monthly&description=FooBar%20Inc%20supporter%20membership%20(EQ5482DI)
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=supporter_monthly&description=FooBar%20Inc%20supporter%20membership%20(YJ6357GP)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -31,60 +31,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:11:54 GMT
+      - Wed, 11 Jun 2014 15:43:23 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '2229'
-      Cache-Control:
-      - no-cache, no-store
       Stripe-Version:
       - '2014-05-19'
-      Access-Control-Max-Age:
-      - '300'
+      Cache-Control:
+      - no-cache, no-store
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
+      Access-Control-Max-Age:
+      - '300'
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      - 'true'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495914,\n  \"id\":
-        \"cus_4CbfDgrxzn1IeW\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc supporter membership (EQ5482DI)\",\n  \"email\": null,\n  \"delinquent\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501402,\n  \"id\":
+        \"cus_4Cd9I4FU7H4vkG\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc supporter membership (YJ6357GP)\",\n  \"email\": null,\n  \"delinquent\":
         false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfDgrxzn1IeW/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfTHWksIKTZN\",\n        \"plan\":
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9I4FU7H4vkG/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9I0RYzxmo6T\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
         \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
         \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
         \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
         \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
         null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402495914,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbfDgrxzn1IeW\",\n
+        1402501403,\n        \"status\": \"active\",\n        \"customer\": \"cus_4Cd9I4FU7H4vkG\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402495914,\n        \"current_period_end\": 1405087914,\n        \"ended_at\":
+        1402501403,\n        \"current_period_end\": 1405093403,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CbfDgrxzn1IeW/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVlsSTgYYp\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4Cd9I4FU7H4vkG/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwV6VJ5CWNG\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfDgrxzn1IeW\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVlsSTgYYp\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd9I4FU7H4vkG\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwV6VJ5CWNG\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:11:54 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:23 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CbfDgrxzn1IeW
+    uri: https://api.stripe.com/v1/customers/cus_4Cd9I4FU7H4vkG
     body:
       encoding: US-ASCII
       string: ''
@@ -111,60 +111,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:11:55 GMT
+      - Wed, 11 Jun 2014 15:43:24 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '2229'
-      Stripe-Version:
-      - '2014-05-19'
       Cache-Control:
       - no-cache, no-store
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
+      Stripe-Version:
+      - '2014-05-19'
       Access-Control-Max-Age:
       - '300'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      - 'true'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495914,\n  \"id\":
-        \"cus_4CbfDgrxzn1IeW\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc supporter membership (EQ5482DI)\",\n  \"email\": null,\n  \"delinquent\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501402,\n  \"id\":
+        \"cus_4Cd9I4FU7H4vkG\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc supporter membership (YJ6357GP)\",\n  \"email\": null,\n  \"delinquent\":
         false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfDgrxzn1IeW/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfTHWksIKTZN\",\n        \"plan\":
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9I4FU7H4vkG/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9I0RYzxmo6T\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
         \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
         \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
         \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
         \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
         null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402495914,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbfDgrxzn1IeW\",\n
+        1402501403,\n        \"status\": \"active\",\n        \"customer\": \"cus_4Cd9I4FU7H4vkG\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402495914,\n        \"current_period_end\": 1405087914,\n        \"ended_at\":
+        1402501403,\n        \"current_period_end\": 1405093403,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CbfDgrxzn1IeW/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVlsSTgYYp\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4Cd9I4FU7H4vkG/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwV6VJ5CWNG\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfDgrxzn1IeW\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVlsSTgYYp\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd9I4FU7H4vkG\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwV6VJ5CWNG\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:11:55 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:24 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CbfDgrxzn1IeW
+    uri: https://api.stripe.com/v1/customers/cus_4Cd9I4FU7H4vkG
     body:
       encoding: US-ASCII
       string: ''
@@ -191,7 +191,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:11:56 GMT
+      - Wed, 11 Jun 2014 15:43:25 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
@@ -203,43 +203,43 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      - 'true'
       Stripe-Version:
       - '2014-05-19'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495914,\n  \"id\":
-        \"cus_4CbfDgrxzn1IeW\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc supporter membership (EQ5482DI)\",\n  \"email\": null,\n  \"delinquent\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402501402,\n  \"id\":
+        \"cus_4Cd9I4FU7H4vkG\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc supporter membership (YJ6357GP)\",\n  \"email\": null,\n  \"delinquent\":
         false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfDgrxzn1IeW/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfTHWksIKTZN\",\n        \"plan\":
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4Cd9I4FU7H4vkG/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4Cd9I0RYzxmo6T\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
         \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
         \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
         \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
         \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
         null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402495914,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbfDgrxzn1IeW\",\n
+        1402501403,\n        \"status\": \"active\",\n        \"customer\": \"cus_4Cd9I4FU7H4vkG\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402495914,\n        \"current_period_end\": 1405087914,\n        \"ended_at\":
+        1402501403,\n        \"current_period_end\": 1405093403,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CbfDgrxzn1IeW/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVlsSTgYYp\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4Cd9I4FU7H4vkG/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cd94AkkLX9BwV6VJ5CWNG\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfDgrxzn1IeW\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVlsSTgYYp\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4Cd9I4FU7H4vkG\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cd94AkkLX9BwV6VJ5CWNG\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:11:56 GMT
+  recorded_at: Wed, 11 Jun 2014 15:43:25 GMT
 recorded_with: VCR 2.9.2
