--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Member_signup.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Member_signup.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_monthly&description=FooBar%20Inc%20corporate%20supporter%20membership%20(KE6698TD)
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_annual&description=FooBar%20Inc%20%20membership%20(CU0092AP)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '190'
+      - '168'
   response:
     status:
       code: 200
@@ -31,11 +31,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:11:48 GMT
+      - Wed, 11 Jun 2014 16:02:59 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2260'
+      - '2239'
       Cache-Control:
       - no-cache, no-store
       Stripe-Version:
@@ -45,46 +45,46 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      - 'true'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495907,\n  \"id\":
-        \"cus_4CbfjG9gpoePqQ\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc corporate supporter membership (KE6698TD)\",\n  \"email\": null,\n  \"delinquent\":
-        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfR3CciXFNeJ\",\n        \"plan\":
-        {\n          \"interval\": \"month\",\n          \"name\": \"Corporate Supporter
-        (Monthly)\",\n          \"created\": 1402481417,\n          \"amount\": 12000,\n
-        \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_monthly\",\n
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402502579,\n  \"id\":
+        \"cus_4CdSPoq149Tq1I\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc  membership (CU0092AP)\",\n  \"email\": null,\n  \"delinquent\": false,\n
+        \ \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
+        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CdSPoq149Tq1I/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CdStlxLKLfy8D\",\n        \"plan\":
+        {\n          \"interval\": \"year\",\n          \"name\": \"Corporate Supporter
+        (Annual)\",\n          \"created\": 1402481436,\n          \"amount\": 144000,\n
+        \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_annual\",\n
         \         \"object\": \"plan\",\n          \"livemode\": false,\n          \"interval_count\":
         1,\n          \"trial_period_days\": null,\n          \"metadata\": {},\n
         \         \"statement_description\": null\n        },\n        \"object\":
-        \"subscription\",\n        \"start\": 1402495907,\n        \"status\": \"active\",\n
-        \       \"customer\": \"cus_4CbfjG9gpoePqQ\",\n        \"cancel_at_period_end\":
-        false,\n        \"current_period_start\": 1402495907,\n        \"current_period_end\":
-        1405087907,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
+        \"subscription\",\n        \"start\": 1402502579,\n        \"status\": \"active\",\n
+        \       \"customer\": \"cus_4CdSPoq149Tq1I\",\n        \"cancel_at_period_end\":
+        false,\n        \"current_period_start\": 1402502579,\n        \"current_period_end\":
+        1434038579,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
         \       \"trial_end\": null,\n        \"canceled_at\": null,\n        \"quantity\":
         1,\n        \"application_fee_percent\": null,\n        \"discount\": null,\n
         \       \"metadata\": {}\n      }\n    ]\n  },\n  \"discount\": null,\n  \"account_balance\":
         0,\n  \"currency\": \"gbp\",\n  \"cards\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/cards\",\n
-        \   \"data\": [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwV88xPfIof\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CdSPoq149Tq1I/cards\",\n
+        \   \"data\": [\n      {\n        \"id\": \"card_104CdS4AkkLX9BwVEJtjTzkD\",\n
         \       \"object\": \"card\",\n        \"last4\": \"4242\",\n        \"type\":
         \"Visa\",\n        \"exp_month\": 12,\n        \"exp_year\": 2016,\n        \"fingerprint\":
         \"ynpvkg0lBh03Sjdq\",\n        \"country\": \"US\",\n        \"name\": null,\n
         \       \"address_line1\": null,\n        \"address_line2\": null,\n        \"address_city\":
         null,\n        \"address_state\": null,\n        \"address_zip\": null,\n
         \       \"address_country\": null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfjG9gpoePqQ\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwV88xPfIof\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CdSPoq149Tq1I\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104CdS4AkkLX9BwVEJtjTzkD\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:11:48 GMT
+  recorded_at: Wed, 11 Jun 2014 16:02:59 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CbfjG9gpoePqQ
+    uri: https://api.stripe.com/v1/customers/cus_4CdSPoq149Tq1I
     body:
       encoding: US-ASCII
       string: ''
@@ -111,55 +111,55 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 14:11:49 GMT
+      - Wed, 11 Jun 2014 16:03:00 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2260'
+      - '2239'
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
-      Access-Control-Max-Age:
-      - '300'
+      Stripe-Version:
+      - '2014-05-19'
       Cache-Control:
       - no-cache, no-store
       Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Stripe-Version:
-      - '2014-05-19'
+      - 'true'
+      Access-Control-Max-Age:
+      - '300'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495907,\n  \"id\":
-        \"cus_4CbfjG9gpoePqQ\",\n  \"livemode\": false,\n  \"description\": \"FooBar
-        Inc corporate supporter membership (KE6698TD)\",\n  \"email\": null,\n  \"delinquent\":
-        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfR3CciXFNeJ\",\n        \"plan\":
-        {\n          \"interval\": \"month\",\n          \"name\": \"Corporate Supporter
-        (Monthly)\",\n          \"created\": 1402481417,\n          \"amount\": 12000,\n
-        \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_monthly\",\n
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402502579,\n  \"id\":
+        \"cus_4CdSPoq149Tq1I\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc  membership (CU0092AP)\",\n  \"email\": null,\n  \"delinquent\": false,\n
+        \ \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
+        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CdSPoq149Tq1I/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CdStlxLKLfy8D\",\n        \"plan\":
+        {\n          \"interval\": \"year\",\n          \"name\": \"Corporate Supporter
+        (Annual)\",\n          \"created\": 1402481436,\n          \"amount\": 144000,\n
+        \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_annual\",\n
         \         \"object\": \"plan\",\n          \"livemode\": false,\n          \"interval_count\":
         1,\n          \"trial_period_days\": null,\n          \"metadata\": {},\n
         \         \"statement_description\": null\n        },\n        \"object\":
-        \"subscription\",\n        \"start\": 1402495907,\n        \"status\": \"active\",\n
-        \       \"customer\": \"cus_4CbfjG9gpoePqQ\",\n        \"cancel_at_period_end\":
-        false,\n        \"current_period_start\": 1402495907,\n        \"current_period_end\":
-        1405087907,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
+        \"subscription\",\n        \"start\": 1402502579,\n        \"status\": \"active\",\n
+        \       \"customer\": \"cus_4CdSPoq149Tq1I\",\n        \"cancel_at_period_end\":
+        false,\n        \"current_period_start\": 1402502579,\n        \"current_period_end\":
+        1434038579,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
         \       \"trial_end\": null,\n        \"canceled_at\": null,\n        \"quantity\":
         1,\n        \"application_fee_percent\": null,\n        \"discount\": null,\n
         \       \"metadata\": {}\n      }\n    ]\n  },\n  \"discount\": null,\n  \"account_balance\":
         0,\n  \"currency\": \"gbp\",\n  \"cards\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/cards\",\n
-        \   \"data\": [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwV88xPfIof\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CdSPoq149Tq1I/cards\",\n
+        \   \"data\": [\n      {\n        \"id\": \"card_104CdS4AkkLX9BwVEJtjTzkD\",\n
         \       \"object\": \"card\",\n        \"last4\": \"4242\",\n        \"type\":
         \"Visa\",\n        \"exp_month\": 12,\n        \"exp_year\": 2016,\n        \"fingerprint\":
         \"ynpvkg0lBh03Sjdq\",\n        \"country\": \"US\",\n        \"name\": null,\n
         \       \"address_line1\": null,\n        \"address_line2\": null,\n        \"address_city\":
         null,\n        \"address_state\": null,\n        \"address_zip\": null,\n
         \       \"address_country\": null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfjG9gpoePqQ\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwV88xPfIof\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CdSPoq149Tq1I\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104CdS4AkkLX9BwVEJtjTzkD\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 14:11:49 GMT
+  recorded_at: Wed, 11 Jun 2014 16:03:00 GMT
 recorded_with: VCR 2.9.2
